[workspace]
resolver = "2"
members  = [
    "fundchain",
    "fctoken",
]

[workspace.dependencies]
soroban-sdk = "23.4.1"

[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = 0
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true